Web app: camera selection

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -193,6 +193,15 @@
                 <div class="throttle-label" id="throttleLabel">Throttle: 0.02</div>
                 <input type="range" id="throttleSlider" min="0" max="0.1" step="0.01" value="0.02">
             </div>
+
+            <label for="cameraView">Camera:</label>
+            <select name="cameraView" id="cameraView">
+                <option value="front">Front</option>
+                <option value="back" selected>Back</option>
+                <option value="backwide">Back Wide</option>
+                <option value="backultrawide">Back Ultra-Wide</option>
+                <option value="backtelephoto">Back Telephoto</option>
+            </select>
         </div>
         
         <div class="center-video">
