Web app: Ability to stop and start local video transmission

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -213,6 +213,7 @@
 
         <div class="right-column">
             <video id="localVideo" autoplay muted playsinline></video>
+            <button id="transmitVideoBtn">Transmit</button>
         </div>
     </div>
 
