Web app: Support for SSL certificates. Web page now auto-detects correct WebSocket URL to use.

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -203,8 +203,8 @@
                 <option value="backtelephoto">Back Telephoto</option>
             </select>
 
-            <label for="serverAddress">Server:</label>
-            <input type="text" id="serverAddress" value="localhost:8000">
+            <label for="websocketEndpoint">Server:</label>
+            <input type="text" id="websocketEndpoint" value="ws://localhost:8000/ws">
         </div>
 
         <div class="center-video">
